--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ app/.flutter-plugins-dependencies
 app/.pub-cache/
 app/.pub/
 app/build/
+app/linux/
+app/windows/
+app/android/
+app/macos/
+app/web/
 
 
 # Symbolication related
